--- a/sites/all/themes/tm/sass/_single.scss
+++ b/sites/all/themes/tm/sass/_single.scss
@@ -622,7 +622,7 @@
     > li {
       float: left;
       position: relative;
-      margin: 0 0.25rem;
+      margin: 0 0.15rem;
     }
   }
 
